--- a/Övning5_Garage1.0/Garage10.csproj
+++ b/Övning5_Garage1.0/Garage10.csproj
@@ -6,4 +6,14 @@
     <RootNamespace>Garage10</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
