a bit of DI and some cleaning

--- a/Övning5_Garage1.0/appsettings.json
+++ b/Övning5_Garage1.0/appsettings.json
@@ -6,19 +6,27 @@
 
         "input": {
             "action": {
-                "load":"HandleLoad",
-                "save":"HandleSave",
-                "parking":"HandleParking",
-                "list":"HandleListCommand",
-                "add":"HandleAddCommand",
-                "remove":"HandleRemoveCommand",
-                "help":"HandleHelp",
-                "quit":"Quit",
-                "q":"Quit",
-                "testpop":"MakeTestPopulation",
-                "new":"MakeNewGarage",
-                "types":"AvailableTypes"
-
+                "load": "HandleLoad",
+                "save": "HandleSave",
+                "parking": "HandleParking",
+                "list": "HandleListCommand",
+                "add": "HandleAddCommand",
+                "remove": "HandleRemoveCommand",
+                "help": "HandleHelp",
+                "quit": "Quit",
+                "q": "Quit",
+                "testpop": "MakeTestPopulation",
+                "new": "MakeNewGarage",
+                "types": "AvailableTypes"
+            },
+            "parkingoperatoraction": {
+                "+": "AddParkingExtras",
+                "-": "RemoveParkingExtras"
+            },
+            "filterstreamaction": {
+                "begin": "StartDataRows",
+                "end": "EndDataRows",
+                "row": "NewDataRow"
             }
         },
 
