--- a/Övning5_Garage1.0/Garage10.csproj
+++ b/Övning5_Garage1.0/Garage10.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="5.0.521" />
   </ItemGroup>
 
   <ItemGroup>
